change link name

--- a/src/i18n/locales/uk/global/index.json
+++ b/src/i18n/locales/uk/global/index.json
@@ -10,7 +10,7 @@
       "1": "Про нас",
       "2": "Як це працює?",
       "3": "Найближчі сесії",
-      "4": "Кому це підійде?"
+      "4": "Що ти отримаєш?"
     },
     "cta": "Записатись"
   },
