--- a/src/i18n/locales/uk/global/index.json
+++ b/src/i18n/locales/uk/global/index.json
@@ -47,7 +47,8 @@
       "cost": "<b>Вартість:</b> {cost}",
       "duration": "<b>Тривалість:</b> 12 занять (3 рази на тиждень)",
       "description": "Розпочни свою подорож у вивчення французької мови з нашою групою початківців! Під час сесій ти навчишся базовим фразам, зможеш представити себе, вітатися, розповідати про вік і країну, а також опануєш перші кроки у спілкуванні французькою мовою. Ми допоможемо тобі подолати мовний бар’єр та відчути впевненість у розмовах.",
-      "date": "<b>Дата початку:</b> {date}"
+      "date": "<b>Дата початку:</b> {date}",
+      "type": "<b>Формат:</b> ONLINE"
     }
   },
   "why": {
