add telegram button

--- a/src/i18n/locales/uk/global/index.json
+++ b/src/i18n/locales/uk/global/index.json
@@ -10,7 +10,8 @@
       "1": "Про нас",
       "2": "Як це працює?",
       "3": "Найближчі сесії",
-      "4": "Що ти отримаєш?"
+      "4": "Що ти отримаєш?",
+      "5": "Напишіть нам"
     },
     "cta": "Записатись"
   },
